--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,17 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Simulador de Votaciones PRM</title>
+       <!-- update the version number as needed 
+       <script defer src="/__/firebase/6.6.1/firebase-app.js"></script>
+       include only the Firebase features as you need 
+       <script defer src="/__/firebase/6.6.1/firebase-auth.js"></script>
+       <script defer src="/__/firebase/6.6.1/firebase-database.js"></script>
+       <script defer src="/__/firebase/6.6.1/firebase-messaging.js"></script>
+       <script defer src="/__/firebase/6.6.1/firebase-storage.js"></script>
+      initialize the SDK after all desired features are loaded 
+       <script defer src="/__/firebase/init.js"></script>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -59,5 +55,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script>
+      document.addEventListener('DOMContentLoaded', function() {
+
+        try {
+          let app = firebase.app();
+          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
+          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
+        } catch (e) {
+          console.error(e);
+          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
+        }
+      });
+    </script> -->
   </body>
 </html>
